Process PR comments